cambio archivo index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenido </h1>
-    <p>Puede que haya mucho.</p>
+    <p>Puede que haya poco que decir.</p>
 </body>
 </html>
